2004-10-21  John W. Eaton  <jwe@octave.org>

	* ov-base.cc (INT_CONV_METHOD): Apply saturation semantics here too.

2004-10-19  John W. Eaton  <jwe@octave.org>

	* ov-range.h (octave_range::write): New function.

2004-10-18  John W. Eaton  <jwe@octave.org>

	* symtab.cc (symbol_record::dimensions_string_req_first_space,
	symbol_record::make_dimensions_string): Use dims() for all objects.

2004-10-18  Oyvind Kristiansen  <oyvinkri@stud.ntnu.no>

	* symtab.cc (symbol_table::parse_whos_line_format): Handle
	size-of-parameter and center-specific format specifiers.

2004-10-18  John W. Eaton  <jwe@octave.org>

	* pt-plot.cc (handle_plot_data): If plotting data from file,
	always use "using" clause.

2004-10-12  David Bateman  <dbateman@free.fr>

	* pt-mat.cc (tm_row_const::tm_row_const_rep::do_init_element,
	tm_const::init): Dimensionality of matrices not necessarily the
	same.  Check before comparing.

2004-10-06  John W. Eaton  <jwe@octave.org>

	* pt-fcn-handle.h (tree_fcn_handle::name): New function.

2004-10-01  John W. Eaton  <jwe@octave.org>

	* ov-range.h (octave_range::valid_as_scalar_index): Ensure int value.
	(octave_range::valid_as_zero_index): Likewise.

	* ov-scalar.h (octave_scalar::valid_as_scalar_index): Ensure int value.
	(octave_scalar::valid_as_zero_index): Likewise.

2004-09-24  John W. Eaton  <jwe@octave.org>

	* version.h (OCTAVE_VERSION): Now 2.1.60.
	(OCTAVE_API_VERSION): Now api-v11.

	* OPERATORS/op-int.h (OCTAVE_MM_INT_OPS): Include missing matrix
	by int matrix ops.
	(OCTAVE_INSTALL_MM_INT_OPS): Install them.

	* OPERATORS/op-i64-i64.cc: Define and install missing int64 by
	matrix and scalar ops.

2004-09-24  David Bateman  <dbateman@free.fr>

	* ov-fcn-inline (Finline): Attempt better auto-detection of
	symbols that should be recognized as arguments.

2004-09-24  John W. Eaton  <jwe@octave.org>

	* ov-str-mat.cc (default_numeric_conversion_function): Return
	scalar object if numel == 1.

2004-09-23  John W. Eaton  <jwe@octave.org>
